Fix overflowing text in tags sections.

--- a/src/sentry/static/sentry/less/sentry.less
+++ b/src/sentry/static/sentry/less/sentry.less
@@ -809,7 +809,7 @@ a.icon-share {
 .progressbar {
   position: relative;
   border: 1px solid lighten(@linkColor, 30%);
-  height: 1.5em;
+  min-height: 1.5em;
   line-height: 1.5em;
 
   > a,
@@ -824,6 +824,10 @@ a.icon-share {
 
   > a {
     left: 5px;
+    position: relative;
+    z-index: 1;
+    padding-right: 60px;
+    display: block;
 
     span {
       position: absolute;
@@ -834,6 +838,7 @@ a.icon-share {
   > div {
     background-color: lighten(@linkColor, 40%);
     text-indent: -100000em;
+    z-index: 0;
   }
 }
 
